--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html manifest="hellow.manifest">
   <head>
-    <title>Application Template</title>
+    <title>Hello-world / Olá Mundo</title>
     <!-- Bootstrap -->
     <link href="css/amelia.bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
