Position of manifest.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
         <div class="span10 offset1">
-            <button id="installButton" class="btn btn-primary" onclick="navigator.mozApps.install('http://local.localhost:8000/manifest.json'); return false;">
+            <button id="installButton" class="btn btn-primary" onclick="navigator.mozApps.install('/json/manifest.json'); return false;">
                 Install this application.
             </button><br />
             <p> Application is <span id="installedStatus">maybe</span> installed</p>
