--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Bootstrap -->
     <link href="css/amelia.bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/ico/favicon.ico">
   </head>
   <body>
     <script src="js/jquery.js"></script>
